test-suite/typecheck/pass/interaction_mutable.first
interaction main() -> Unit {
  var x: Int = 0;
  x = 10;
  return;
}
