test-suite/typecheck/fail/range_element_type.first
interaction main() -> Unit {
  for i in 1..=5 {
    let x: String = i;
  };
  return;
}
